fix: tags overflow

--- a/src/components/BookCard/styles.sass
+++ b/src/components/BookCard/styles.sass
@@ -43,11 +43,8 @@
     margin: 1.5rem 0
 
   ul.tags
-    display: flex
-    flex-direction: row
-    align-items: center
-
     li
+      display: inline-block
       list-style-type: none
       font-size: 1.5rem
       color: var(--color-primary)
